--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="description" content="FinHelper - мультибанковское приложение для управления финансами" />
+    <meta name="theme-color" content="#667eea" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <title>FinHelper</title>
   </head>
   <body>
